<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSilver"
    android:gravity="bottom"
    android:stretchColumns="*">

    <TableRow>

        <EditText
            android:id="@+id/edKetqua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_span="4"
            android:background="@color/colorSilver"
            android:fontFamily="sans-serif"
            android:paddingBottom="10dp"
            android:paddingRight="@dimen/size10dp"
            android:paddingTop="40dp"
            android:phoneNumber="true"
            android:text="@string/khong"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size60dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnAc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorWhite50"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/ac"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnDoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorWhite50"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/doi"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnPhantram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorWhite50"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/phantram"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnChia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorOrange"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/chia"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/bay"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/tam"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/chin"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnNhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorOrange"
            android:padding="@dimen/size25dp"
            android:text="@string/nhan"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/bon"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/nam"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/sau"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnTru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorOrange"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/tru"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/mot"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/hai"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/ba"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnCong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorOrange"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/cong"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:layout_span="2"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/khong"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnPhay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@drawable/changebackground"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/phay"
            android:textSize="@dimen/size30dp" />

        <Button
            android:id="@+id/btnBang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size1dp"
            android:background="@color/colorOrange"
            android:fontFamily="sans-serif"
            android:padding="@dimen/size25dp"
            android:text="@string/bang"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size30dp" />
    </TableRow>
</TableLayout>
